cmake_minimum_required(VERSION 3.13)

# Find GTest
enable_testing()
find_package(GTest REQUIRED)

add_executable(wfQueue include/wfQueue.h tests/unittests.cpp)
include_directories(include)
target_link_libraries(wfQueue GTest::GTest GTest::Main)

gtest_discover_tests(wfQueue)

find_package(Boost 1.65 REQUIRED COMPONENTS system)
target_link_libraries(wfQueue Boost::system)

# Use C++17, without compiler specific extensions
target_compile_features(wfQueue PUBLIC cxx_std_17)
set_target_properties(wfQueue PROPERTIES CXX_EXTENSIONS OFF)